--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Czubordle",
-  "name": "Czubordle - A Wordle clone for fun and science",
+  "short_name": "czubai's stuff",
+  "name": "czubai is keeping some of his stuff here",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
