--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "czubordle",
+  "name": "czubai",
   "packageManager": "yarn@4.1.1",
   "version": "0.1.0",
   "homepage": "https://mczubaj.github.io/czubai",
