--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "czubai",
   "packageManager": "yarn@4.1.1",
   "version": "0.1.0",
-  "homepage": "https://mczubaj.github.io/czubai",
+  "homepage": "https://mczubaj.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
