--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "czubordle",
+  "name": "czubai",
   "packageManager": "yarn@4.1.1",
   "version": "0.1.0",
   "homepage": "https://mczubaj.github.io/czubai",
@@ -45,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^6.1.1"
   }
 }
